Fix test cases broken by new refactoring